<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    android:background="#FBFBF5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/workpoint"
        android:layout_width="115.97dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="61dp"
        android:gravity="top"
        android:text="@string/workpoint"
        android:textAppearance="@style/workpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_2"
        android:layout_width="354dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94.5dp"
        android:background="@drawable/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="214.83dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="286dp"
        android:layout_height="426dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/editTvPhone"
        android:layout_width="206.82dp"
        android:layout_height="32.29dp"
        android:layout_marginTop="72.71dp"
        android:background="@drawable/rectangle_3"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/some_id"
        android:inputType="phone"
        android:lineSpacingExtra="14sp"
        android:paddingLeft="11.05dp"
        android:textAppearance="@style/some_id"
        android:textColorHint="#991B1F3B"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <EditText
        android:id="@+id/editTvPass"
        android:layout_width="206.82dp"
        android:layout_height="32.29dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_3"
        android:ems="10"
        android:gravity="center|left"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="11.05dp"
        android:textAppearance="@style/some_id"
        android:textColorHint="#991B1F3B"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTvPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTvPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTvPhone" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="125.21dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="37.04dp"
        android:layout_marginRight="47.62dp"
        android:backgroundTint="@drawable/button_bg_color"
        android:elevation="10dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:textColor="@drawable/button_text_color"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editTvPass"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/editTvPass"
        app:layout_constraintTop_toBottomOf="@+id/editTvPass" />

    <TextView
        android:id="@+id/or"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="ИЛИ"
        android:textAppearance="@style/some_id"
        android:textColor="#1B1F3B66"
        android:translationY="-7.19sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btSignIn"
        app:layout_constraintStart_toStartOf="@+id/btSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <ImageButton
        android:id="@+id/bt2"
        android:layout_width="123.89dp"
        android:layout_height="22.62dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btSignIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btSignIn"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <TextView
        android:id="@+id/question"
        android:layout_width="173.97dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="У вас нет учетной записи?"
        android:textAppearance="@style/question"
        android:textColor="#991B1F3B"
        android:textSize="10sp"
        android:translationY="-7.19sp"
        app:layout_constraintEnd_toEndOf="@+id/bt2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/bt2"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="133.12dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:gravity="center|top"
        android:lineSpacingExtra="14sp"
        android:onClick="setOnClickReg"
        android:text="@string/sign_out_text_hyper"
        android:textAppearance="@style/question"
        android:textColor="#4DA8F7"
        android:translationY="-7.19sp"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <TextView
        android:id="@+id/tvError1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/errors_empty"
        android:layout_marginLeft="6dp"
        android:visibility="invisible"
        android:textAppearance="@style/errors_empty"
        app:layout_constraintBottom_toTopOf="@+id/editTvPhone"
        app:layout_constraintEnd_toEndOf="@+id/editTvPhone"
        app:layout_constraintStart_toStartOf="@+id/editTvPhone" />

    <TextView
        android:id="@+id/tvError2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/errors_exception"
        android:visibility="invisible"
        android:textAppearance="@style/errors_exception"
        android:layout_marginLeft="6dp"
        app:layout_constraintBottom_toTopOf="@+id/editTvPass"
        app:layout_constraintEnd_toEndOf="@+id/editTvPass"
        app:layout_constraintStart_toStartOf="@+id/editTvPass" />

</androidx.constraintlayout.widget.ConstraintLayout>