<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    android:background="#FBFBF5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/workpoint"
        android:layout_width="115.97dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42.99dp"
        android:layout_marginTop="61dp"
        android:gravity="top"
        android:text="@string/workpoint"
        android:textAppearance="@style/workpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_2"
        android:layout_width="354dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="94.5dp"
        android:background="@drawable/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="214.83dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:gravity="center_horizontal|top"
        android:text="@string/welcome"
        android:textAppearance="@style/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="286dp"
        android:layout_height="426dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:background="@drawable/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <EditText
        android:id="@+id/editTvPhone"
        android:layout_width="206.82dp"
        android:layout_height="32.29dp"
        android:layout_marginTop="72.71dp"
        android:background="@drawable/rectangle_3"
        android:ems="10"
        android:gravity="center|clip_vertical"
        android:hint="@string/some_id"
        android:inputType="phone"
        android:lineSpacingExtra="14sp"
        android:textAppearance="@style/some_id"
        android:textColorHint="#991B1F3B"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_7"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="@+id/rectangle_7"
        app:layout_constraintTop_toTopOf="@+id/rectangle_7" />

    <EditText
        android:id="@+id/editTvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_3"
        android:gravity="center|clip_vertical"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/some_id"
        android:textColorHint="#991B1F3B"
        app:layout_constraintEnd_toEndOf="@+id/editTvPhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTvPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTvPhone" />

    <Button
        android:id="@+id/button"
        android:layout_width="125.21dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28.33dp"
        android:backgroundTint="#E0E0D6"
        android:elevation="5dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:textColor="#991B1F3B"
        app:layout_constraintEnd_toEndOf="@+id/editTvPass"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="@+id/editTvPass"
        app:layout_constraintTop_toBottomOf="@+id/editTvPass" />

    <TextView
        android:id="@+id/or"
        android:layout_width="29dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="ИЛИ"
        android:textAppearance="@style/some_id"
        android:textColor="#1B1F3B66"
        android:translationY="-7.19sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageButton
        android:id="@+id/bt2"
        android:layout_width="123.89dp"
        android:layout_height="22.62dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <TextView
        android:id="@+id/question"
        android:layout_width="173.97dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36.38dp"
        android:gravity="center"
        android:lineSpacingExtra="14sp"
        android:text="У вас нет учетной записи?"
        android:textAppearance="@style/question"
        android:textColor="#991B1F3B"
        android:translationY="-7.19sp"
        app:layout_constraintEnd_toEndOf="@+id/bt2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/bt2"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="133.12dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:gravity="center|top"
        android:lineSpacingExtra="14sp"
        android:text="Зарегистрироваться"
        android:textAppearance="@style/question"
        android:textColor="#991B1F3B"
        android:translationY="-7.19sp"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

</androidx.constraintlayout.widget.ConstraintLayout>